_sass/setup/init.scss
*:focus-visible {
  outline: 4px solid rgb(0, 0, 0);
  outline-offset: 4px;
  border-radius: var(--border-radius);
  z-index: 2;
}

html {
  line-height: 1.6;
  scroll-behavior: smooth;
  transition: opacity 1s ease-in-out;
  font-family: "Rubik", sans-serif;
  background-color: var(--base-200);
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  letter-spacing: -1%;
  font-family: var(--ff-header);
  font-weight: 700;
  line-height: 1.1;
}

input[type="text"], input[type="email"], textarea {
  border-radius: var(--border-radius);
  padding: var(--sp-lg);
  font-size: var(--fs-lg);
  box-shadow: var(--shadow);
  min-width: 10rem;
  min-height: var(--sp-xxxxl);
  border: none;
  background-color: var(--base-100);
}

a {
  color: var(--brand);
}

#content {
  padding: 0 1rem;
}

.skip {
  position: fixed;
  left: -10000px;
  width: 1px;
  height: 1px;
  background-color: var(--base-900);
  color: var(--base-100);
  padding: var(--sp-xl);
  margin: var(--sp-xl);
  border-radius: var(--border-radius);
  overflow: hidden;
  z-index: 2;
}

.skip:focus-visible {
  top: 0;
  left: 0;
  width: auto;
  height: auto;
}

.container {
  padding: var(--sp-xxxxl);

  @media (max-width: 1000px) {
    padding-inline: var(--sp-xxl);
  }

  @media (max-width: 600px) {
    padding-inline: var(--sp-xl);
  }

  & > * {
    max-width: 1600px;
    margin-inline: auto;
  }

}

/* TYPOGRAPHY */
.text-subheader {
  font-family: var(--ff-header);
  font-size: var(--fs-xxl);
  font-weight: 600;
  padding-bottom: var(--sp-xxxl);

  &--light {
    color: var(--base-100);
  }

  &--dark {
    color: var(--base-900);
  }

  &--brand {
    color: var(--brand);
  }

  &--bold {
    font-weight: 800;
  }
}

.text-header {
  font-family: var(--ff-header);
  font-size: var(--fs-xxxl);
  font-weight: 700;
  padding-bottom: var(--sp-xxl);
  line-height: 1.1;

  &--light {
    color: var(--base-100);
  }

  &--dark {
    color: var(--base-900);
  }

  &--brand {
    color: var(--brand);
  }

  &--bold {
    font-weight: 800;
  }
}

.text-page-header {
  position: relative;
  font-family: var(--ff-header);
  font-size: var(--fs-xxxxl);
  font-weight: 900;
  margin-bottom: var(--sp-xxxl);
  width: -moz-fit-content;
  width: fit-content;
  text-align: center;

  &::after {
    content: "";
    width: 100%;
    height: 8px;
    background-color: var(--brand);
    border-radius: 50px;
    position: absolute;
    left: 0;
    bottom: -1rem;
  }
}

.text-page-subheader {
  font-family: var(--ff-body);
  font-size: var(--fs-lg);
  font-weight: 400;
  max-width: 75ch !important;
  line-height: 1.6;
  padding-bottom: var(--sp-xxxl);

  &--bold {
    font-size: var(--fs-xl);
    font-weight: 600;
  }
}

p, .text-body {
  font-size: var(--fs-lg);
  font-weight: 400;
  line-height: 1.6;
  color: var(--base-800);
}

.text-body {

  &--light {
    color: var(--base-200);
  }

  &--dark {
    color: var(--base-800);
  }

  &--brand {
    color: var(--brand);
  }

  &--bold {
    font-family: var(--ff-header);
    font-weight: 600;
    font-size: var(--fs-xl);
  }

  &--small {
    font-size: var(--fs-sm);
    font-weight: 200;
  }
}

.text-lightest {
  color: var(--base-100);
}

.text-light {
  color: var(--base-200);
}

.text-dark {
  color: var(--base-800);
}

.text-darkest {
  color: var(--base-900);
}

.text-brand {
  color: var(--brand);
}

.text-brand--alt {
  color: var(--brand-alt);
}

.text-align-center {
  text-align: center;
}

.text-small {
  font-size: var(--fs-md);
}

.text-italic {
  font-style: italic;
}

.text-bold {
  font-weight: 700 !important;
}

.text-normal {
  font-weight: 400 !important;
}
/* END TYPOGRAPHY */

/* SVGs */
  svg.fill-brand {
    fill: var(--brand);
  }

  svg.fill-white {
    fill: var(-base-100);
  }
/* END SVGs */


/* BACKGROUND COLORS */
.bg-lightest {
  background-color: var(--base-100);
}

.bg-light {
  background-color: var(--base-200);
}

.bg-dark {
  background-color: var(--base-800);
}

.bg-darkest {
  background-color: var(--base-900);
}

.bg-brand {
  background-color: var(--brand);
}
/* END COLORS */

/* LINES */
.line {

  background-color: var(--base-400);
  border-radius: var(--border-radius);
  
  &--vertical {
    width: 4px;
    height: 100%;
  }

  &--horizontal {
    height: 4px;
    width: 100%;
  }

  &--brand {
    background-color: var(--brand);
  }

  &--light {
    opacity: 0.5;
  }
}
/* END LINES */

/* FONT FAMILIES */
.ff-header {
  font-family: var(--ff-header);
}

.ff-body {
  font-family: var(--ff-body);
}
/* END FONT FAMILIIES*/

/* WIDTH */
   .w-100 {
    width: 100% !important;
   }

   .max-w-100 {
    max-width: 100% !important;
   }

   .w-fit-content {
    width: fit-content !important;
   }
/* END WIDTH */

/* PADDING AND MARGIN */
  $sizes: (
    none: var(--sp-none),
    xs: var(--sp-xs),
    sm: var(--sp-sm),
    md: var(--sp-md),
    lg: var(--sp-lg),
    xl: var(--sp-xl),
    xxl: var(--sp-xxl),
    xxxl: var(--sp-xxxl),
    xxxxl: var(--sp-xxxxl)
  );

  @mixin generate-padding-and-margin($property-shorthand, $full-property-name) {
    @each $size, $value in $sizes {
      .#{$property-shorthand}-#{$size} {
        #{$full-property-name}: $value !important;
      }
    }
  }

  @include generate-padding-and-margin("p", "padding");
  @include generate-padding-and-margin("m", "margin");

  @each $side-shorthand, $full-side-name in ("t": "top", "r": "right", "b": "bottom", "l": "left") {
    @include generate-padding-and-margin("p#{$side-shorthand}", "padding-#{$full-side-name}");
    @include generate-padding-and-margin("m#{$side-shorthand}", "margin-#{$full-side-name}");
  }

  .mi-auto {
    margin-inline: auto;
  }

/* END PADDING AND MARGIN */

/* MISC */
.shadow {
  box-shadow: var(--shadow);
}

.contact-form {
  width: 100%;
  height: 900px;
  display: block;

  @media (max-width: 750px) {
    height: 1000px;
  }
}

.card {
  background-color: var(--base-100);
  padding: var(--sp-xxl);
  border-radius: var(--border-radius);
  box-shadow: var(--shadow);
}

input[type="radio"] {
  position: absolute;
  opacity: 0;
  width: 0;
  height: 0;
}

/* Style for the selected state */
input[type="radio"]:checked + .radio {
  background-color: var(--brand);
}

.hidden {
  display: grid;
  grid-template-rows: 0fr;
  transition: grid-template-rows 0.2s ease;

  &.show {
    grid-template-rows: 1fr;
  }
}

.hidden *:not(a) {
  overflow: hidden;
}

.hidden:not(.show) .card {
  padding-block: 0;
  box-shadow: none;
  transition: padding 0.3s ease; // The padding for a card goes to 0 when hidden. This gives time for the padding to slowly go to 0 so it isn't so jarring.
}

.d-none {
  display: none;
}

li {
  margin-left: var(--sp-xl);
  margin-bottom: var(--sp-md);
}
/* END MISC */

